# limoncello

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
include/Limoncello/Config/: Config.h  PassConfig.h
include/Limoncello/Config/Pass/: ArithmeticMangler.h  Bloater.h  ConstantMangler.h  Flattener.h  StringObfuscator.h
include/Limoncello/Pass/: ArithmeticMangler.h  Bloater.h  ConstantMangler.h  Flattener.h  StringObfuscator.h
include/Limoncello/Support/: Function.h  Module.h  Random.h
lib/Config/: Config.cpp  PassConfig.cpp
lib/Pass/: ArithmeticMangler.cpp  Bloater.cpp  ConstantMangler.cpp  Flattener.cpp  StringObfuscator.cpp  StringObfuscatorBitcode.h
lib/Support/: Function.cpp  Module.cpp  Random.cpp
src/: Plugin.cpp
test/: BuildSamples.py
test/Configs/: ArithmeticMangler.yml  Bloater.yml  ConstantMangler.yml  Everything.yml  Flattener.yml  FlattenerRandomIDs.yml  StringObfuscator.yml
test/Samples/: ArithmeticBonanza.c  ConstantPaloozaRedux.c  DoubleSwitch.c  Hello.c  NumberClassifier.c  SayHello.c  SayHelloLibrary.c  SimpleBlocks.c
